  - when reading $ff8205/07/09 on STE, take into account the value
    of horizontal scrolling/prefetch and linewidth.
  - when writing to $ff8205/07/09 on STE, correctly handle the case
    where the write is made while display in ON.

Emulator:
- Host mouse is centered to Hatari window on Falcon resolution changes
  (helps in synchronizing host and emulated mouse positions)
- GEMDOS drive emulation:
  - support long host directory names and much improved long filename support
  - convert host filename chars invalid in TOS to valid ones ('@')
  - use TOS filename matching instead of glob() (can match names with [])
  - Option for preventing emulated drive directory modifications
    ("--mount-changes no")
- AVI file recording:
  - video can be stored as BMP or as PNG images
  - audio is stored as 16 bits stereo PCM.
- Statusbar shows CPU type & speed
- Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
  from the GUI in addition to DD & SD images
- Major debugger improvements:
  - debugger command, command argument and symbol name TAB-completion
    support. Requires readline library
  - "parse" command and --parse Hatari command line option to
    execute debugger commands from a file
  - "stateload" and "statesave" commands for memory snapshots
  - "trace" command for tracing what the emulated code does
    - GEMDOS tracing gives slightly more information
  - "symbols" command for loading and listing CPU & DSP code
    symbols/addresses.  Symbols are shown on CPU & DSP disassembly
    and can be used in breakpoints
  - "evaluate" command for doing calculations. Register and symbol
    names in expressions are replaced by their values. '$' will be
    TAB-completed to last 'evaluate' command result
  - "cd" command to change Hatari work directory
  - "exec" command to execute shell commands
  - "info" command for showing Atari HW and OS information
  - "lock" command for setting what information is shown every time on