@@ -572,16 +572,44 @@ Zoom low resolution (1=no, 2=yes)
 <tr valign="top" align="left">
 <td width="10%"></td>
 <td width="89%">
-<b>--frameskips &lt;x&gt;</b></td>
+<b>--max-width &lt;x&gt;</b></td>
 </table>
 <table width="100%" border=0 rules="none" frame="void"
        cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="21%"></td>
 <td width="77%">
-Skip &lt;x&gt; frames after each displayed frame to
-accelerate emulation (0=disabled, &gt;4 uses automatic
-frameskip with given value as maximum)
+Maximum window width for zooming (Falcon/TT only)
+</td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="10%"></td>
+<td width="89%">
+<b>--max-height &lt;x&gt;</b></td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="21%"></td>
+<td width="77%">
+Maximum window height for zooming (Falcon/TT only)
+</td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="10%"></td>
+<td width="89%">
+<b>--aspect &lt;bool&gt;</b></td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="21%"></td>
+<td width="77%">
+Whether to do monitor aspect ratio correction (Falcon/TT only)
 </td>
 </table>
 <table width="100%" border=0 rules="none" frame="void"
@@ -596,8 +624,24 @@ frameskip with given value as maximum)
 <tr valign="top" align="left">
 <td width="21%"></td>
 <td width="77%">
-Show screen borders (for overscan demos, ST(e) color mode
-specific etc)
+Show ST/STE screen borders (for low/med resolution overscan demos)
+</td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="10%"></td>
+<td width="89%">
+<b>--frameskips &lt;x&gt;</b></td>
+</table>
+<table width="100%" border=0 rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="21%"></td>
+<td width="77%">
+Skip &lt;x&gt; frames after each displayed frame to
+accelerate emulation (0=disabled, &gt;4 uses automatic
+frameskip with given value as maximum)
 </td>
 </table>
 <table width="100%" border=0 rules="none" frame="void"
